# python-template

./: README.md  cookiecutter.json
{{cookiecutter.app_name}}/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
{{cookiecutter.app_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.app_name}}/tests/: test_fake.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: fake.py
