# pyproject.toml

[tool.poetry]
name = "{{ cookiecutter.app_name }}"
version = "0.1.0"
description = ""
authors = ["Virgile"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
black      = "^24.4"
isort      = "^5.13"
pytest     = "^8.2"
pytest-cov = "^5.0"


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"